# RepAL

./: .gitignore  LICENSE  README.md  alternative_pipeline.py  config.yaml  environment.yml  load_model.py  load_task.py  pyproject.toml  requirements.txt  test_mamba.py
debug/: epoch_0_checkpoint.pth  epoch_10_checkpoint.pth  epoch_11_checkpoint.pth  epoch_12_checkpoint.pth  epoch_13_checkpoint.pth  epoch_14_checkpoint.pth  epoch_15_checkpoint.pth  epoch_16_checkpoint.pth  epoch_17_checkpoint.pth  epoch_18_checkpoint.pth  epoch_19_checkpoint.pth  epoch_1_checkpoint.pth  epoch_20_checkpoint.pth  epoch_21_checkpoint.pth  epoch_22_checkpoint.pth  epoch_23_checkpoint.pth  epoch_24_checkpoint.pth  epoch_25_checkpoint.pth  epoch_26_checkpoint.pth  epoch_27_checkpoint.pth  epoch_28_checkpoint.pth  epoch_29_checkpoint.pth  epoch_2_checkpoint.pth  epoch_30_checkpoint.pth  epoch_31_checkpoint.pth  epoch_32_checkpoint.pth  epoch_33_checkpoint.pth  epoch_34_checkpoint.pth  epoch_35_checkpoint.pth  epoch_36_checkpoint.pth  epoch_37_checkpoint.pth  epoch_38_checkpoint.pth  epoch_39_checkpoint.pth  epoch_3_checkpoint.pth  epoch_4_checkpoint.pth  epoch_5_checkpoint.pth  epoch_6_checkpoint.pth  epoch_7_checkpoint.pth  epoch_8_checkpoint.pth  epoch_9_checkpoint.pth
dsa_analysis/: __init__.py  combine.py  dsa.py  lorenz.py  lorenz_class.py  tools.py  visualize_patterns.py
main/: RNN_rate_dynamics.py  __init__.py  dataset.py  generate_data.py  model.py  plot_env.py  representation.py  task.py  train.py
models/: softplus_128_0.0001__False_train.pth  softplus_128_0.0001__True_train.pth  softplus_128_0.0001_pretrain.pth  softplus_128_0.001__False_train.pth  softplus_128_0.001__True_train.pth  softplus_128_0.001_pretrain.pth  softplus_256_0.0001__False_train.pth  softplus_256_0.0001__True_train.pth  (+16 more)
(+78 files in other folders)
